--- a/index.html
+++ b/index.html
@@ -111,24 +111,24 @@
                 a;sdlkfjas;ldkfjas;dl fkj;;laskdj kasdf;lkj
                 asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
             </p><br>
-            <p class="animated zoomInLeft delay-0s"> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
-                a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
-                asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
+            <p class="animated zoomInLeft delay-0s"> Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri
+                sipsum super duper hippi lippi yabba sica hicsum super sipi hoopi hippi sit salaca
+                tripsum aldksfja;slk dfj;lsakdjdf;laksdjf
             </p><br>
-            <p class="animated zoomInRight delay-0s"> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
-                a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
-                asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
+            <p class="animated zoomInRight delay-0s"> Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri
+                sipsum super duper hippi lippi yabba sica hicsum super sipi hoopi hippi sit salaca
+                tripsum aldksfja;slk dfj;lsakdjdf;laksdjf
             </p><br>
-            <p class="animated zoomInLeft delay-0s"> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
-                a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
-                a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
+            <p class="animated zoomInLeft delay-0s"> Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri
+                sipsum super duper hippi lippi yabba sica hicsum super sipi hoopi hippi sit salaca
+                tripsum aldksfja;slk dfj;lsakdjdf;laksdjf
             </p><br>
         </section>
     </div>
 
     <div id="contact" style="display:none;" class="jumbotron">
         <section class="portfoliocontactsection animated zoomInRight delay-0s">
-            <h2>Contact
+            <h2>Contact - stevenbowler@yahoo.com +1-956-792-4128
             </h2>
             <form>
                 <label>Name: </label><br><br>
