update photo on home page

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <section class="animated zoomInRight delay-0s">
             <h2>About Me
             </h2>
-            <img class="animated zoomInRight delay-0s" src="./assets/images/homephoto.png" alt="SB photo" height="100px"
-                width="100px">
+            <img class="animated zoomInRight delay-0s" src="./assets/images/IMG_3192.JPG" alt="SB photo" height="100px"
+                width="200px">
             <p class="animated zoomInRight delay-0s"> <strong>NOTE: THE SEARCH WORKS FOR THIS REPOSITORY CAN SEARCH FOR
                     ANY CONTENT ... </strong>
                 Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri sipsum
