update about me page to replace lorem ipsum text

--- a/index.html
+++ b/index.html
@@ -99,45 +99,44 @@
             <h2>About Me
             </h2>
             <img class="animated zoomInRight delay-0s" src="./assets/images/IMG_3192.JPG" alt="SB photo" height="100px"
-                width="200px">
-            <p class="animated zoomInRight delay-0s"> <strong>NOTE: THE SEARCH WORKS FOR THIS REPOSITORY CAN SEARCH FOR
-                    ANY CONTENT ... </strong>
-                Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri sipsum
-                super duper hippi lippi yabba sica hicsum super sipi hoopi hippi sit salaca
-                tripsum aldksfja;slk dfj;lsakdjdf;laksdjf
-                a;sdlkfjas;ldkfja s;dlfkj sd;flkjas;dlkfj;asdlfkj;;laskdj kasdf;lkj
-                asd a; lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
-                a;sdlkfjas ;ldkfjas;dlfkjsd;flkjas;dlkf j;asdlfkj;;laskdj kasdf;lkj
-                a;sdlkfjas;ldkfjas;dl fkj;;laskdj kasdf;lkj
-                asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
+                width="160px">
+            <p class="animated zoomInRight delay-0s"> <strong> Husband to Laura, father to Alan and Eva - and we have 7
+                    dogs too.</strong>
             </p><br>
-            <p class="animated zoomInLeft delay-0s"> Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri
-                sipsum super duper hippi lippi yabba sica hicsum super sipi hoopi hippi sit salaca
-                tripsum aldksfja;slk dfj;lsakdjdf;laksdjf
+            <p class="animated zoomInLeft delay-0s"> I have 40 years of successful entrepreneurial experience in
+                operations management
+                and advanced manufacturing control systems execution in various countries.
             </p><br>
-            <p class="animated zoomInRight delay-0s"> Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri
-                sipsum super duper hippi lippi yabba sica hicsum super sipi hoopi hippi sit salaca
-                tripsum aldksfja;slk dfj;lsakdjdf;laksdjf
+            <p class="animated zoomInRight delay-0s"> Effective January 2020 I am enrolled part-time in both: Masters
+                Science in Information Technology at University of Texas Rio Grande Valley; and, the Coding Bootcamp
+                program at University
+                of Texas Austin. Professional development in these areas will complement my experience and enable me to
+                afford even more effective means of improving operational efficiency in manufacturing operations.
             </p><br>
-            <p class="animated zoomInLeft delay-0s"> Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri
-                sipsum super duper hippi lippi yabba sica hicsum super sipi hoopi hippi sit salaca
-                tripsum aldksfja;slk dfj;lsakdjdf;laksdjf
+            <p class="animated zoomInLeft delay-0s"> As a successful entrepreneur I see significant opportunities to
+                offer value to
+                manufacturing operations customers through project management and software development for higher level
+                operational
+                monitoring and control. My experience in operations management will help ensure that any solutions
+                offered, be they
+                operational or software based, will be value-adding.
             </p><br>
         </section>
     </div>
 
     <div id="contact" style="display:none;" class="jumbotron">
         <section class="portfoliocontactsection animated zoomInRight delay-0s">
-            <h2>Contact - stevenbowler@yahoo.com +1-956-792-4128
+            <h2>Contact
             </h2>
             <form>
-                <label>Name: </label><br><br>
+                <small>stevenbowler@yahoo.com +1-956-792-4128</small><br>
+                <label>Name: </label><br>
                 <input type=text placeholder="Enter Name" width=100%
                     style="background-color:lightgrey; color:black;"><br><br>
-                <label>Email: </label><br><br>
+                <label>Email: </label><br>
                 <input type=email placeholder="Example@gmail.com"
                     style="background-color:lightgrey; color:black;"><br><br>
-                <label>Enter your message here please: </label><br><br>
+                <label>Enter your message here please: </label><br>
                 <textarea rows="6" placeholder="Enter Message Please"
                     style="background-color:lightgrey; color:black;"></textarea><br><br>
                 <button type=submit height=40px>Submit</button><br><br>
