more cleanup profile dropdown

--- a/index.html
+++ b/index.html
@@ -55,26 +55,23 @@
                                 Game</a>
                             <a class="dropdown-item" href="https://stevenbowler.github.io/Word-Guess-Game/">Word
                                 Guess Game</a>
-                            <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Joggle Game - see
-                                Evolution below</a>
                             <a class="dropdown-item" href="https://robertalanis.github.io/Project-1/">Bountiful
                                 Books - Team Project 1</a>
+                            <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Joggle Game - see
+                                Bootcamp Prework
+                                Evolution below</a>
                             <!-- <a class="dropdown-item" href="index2.html">Responsive Profile w/o Bootstrap</a> -->
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="./assets/module6/index.html">Evolution -
-                                Prework
-                                Module 6 Dec. 3, 2019</a>
-                            <a class="dropdown-item" href="./assets/module6/index8.html">Evolution - Prework Module 6
-                                Dec. 9, 2019</a>
-                            <a class="dropdown-item" href="./assets/module6/indexJQuery.html">Evolution - Prework Module
-                                6 Dec. 15,
-                                2019</a>
-                            <a class="dropdown-item" href="./assets/module6/indexReact.html">Evolution - Prework Module
-                                6 Dec. 28,
-                                2019</a>
-                            <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Evolution - Prework
-                                Module 6 Jan. 15,
-                                2020</a>
+                            <a class="dropdown-item" href="./assets/module6/index.html">Dec. 3, 2019 Bootcamp Prework
+                                Jiggle App - 1st JavaScript code</a>
+                            <a class="dropdown-item" href="./assets/module6/index8.html">Dec. 9, 2019 Jiggle App version
+                                8</a>
+                            <a class="dropdown-item" href="./assets/module6/indexJQuery.html">Dec. 15,
+                                2019 Jiggle App JQuery version</a>
+                            <a class="dropdown-item" href="./assets/module6/indexReact.html">Dec. 28,
+                                2019 Jiggle App Standalone ReactJS version</a>
+                            <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Jan. 15,
+                                2020 Joggle App MERN stack version</a>
                         </div>
                     </li>
                     <li class="nav-item">
