add liri-node-app homework 8

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                             Portfolio
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="https://github.com/stevenbowler/liri-node-app">Liri Node App
+                                Repository, see README.md</a>
                             <a class="dropdown-item" href="https://stevenbowler.github.io/RPSchallenge/">RPS
                                 Challenge</a>
                             <a class="dropdown-item" href="https://stevenbowler.github.io/GifTastic/">GifTastic</a>
