add FriendFinder Heroku app

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                             Portfolio
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="https://intense-ravine-38720.herokuapp.com/">FriendFinder, on
+                                Heroku</a>
                             <a class="dropdown-item" href="https://github.com/stevenbowler/bamazon">bamazon, see
                                 README.md</a>
                             <a class="dropdown-item" href="https://github.com/stevenbowler/WordGuess-Cli">WordGuess-CLI
