add burger Restaurant App

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                             Portfolio
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <!-- https://vast-ridge-32092.herokuapp.com/ -->
+                            <a class="dropdown-item" href="https://vast-ridge-32092.herokuapp.com/">burger Restaurant
+                                App, on
+                                Heroku</a>
                             <a class="dropdown-item" href="https://intense-ravine-38720.herokuapp.com/">FriendFinder, on
                                 Heroku</a>
                             <a class="dropdown-item" href="https://github.com/stevenbowler/bamazon">bamazon, see
