add Pet Adoption App, Team Project 2

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <!-- https://vast-ridge-32092.herokuapp.com/ -->
+                            <a class="dropdown-item" href="https://project-bbers.herokuapp.com/">Friendly Neighborhood
+                                Pet Adoption App, on Heroku, Team Project 2</a>
+                            <a class="dropdown-item"
+                                href="https://protected-hollows-73924.herokuapp.com/">sequelizedBurger Restaurant
+                                App, on
+                                Heroku</a>
                             <a class="dropdown-item" href="https://vast-ridge-32092.herokuapp.com/">burger Restaurant
                                 App, on
                                 Heroku</a>
@@ -69,20 +75,10 @@
                                 Guess Game</a>
                             <a class="dropdown-item" href="https://robertalanis.github.io/Project-1/">Bountiful
                                 Books - Team Project 1</a>
-                            <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Joggle Game - see
-                                Bootcamp Prework
-                                Evolution below</a>
+                            <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Joggle Game -
+                                Full Stack MERN App with Password Ecryption and JSON Web Tokens</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="./assets/module6/index.html">Dec. 3, 2019 Bootcamp Prework
-                                Jiggle App - 1st JavaScript code</a>
-                            <a class="dropdown-item" href="./assets/module6/index8.html">Dec. 9, 2019 Jiggle App version
-                                8</a>
-                            <a class="dropdown-item" href="./assets/module6/indexJQuery.html">Dec. 15,
-                                2019 Jiggle App JQuery version</a>
-                            <a class="dropdown-item" href="./assets/module6/indexReact.html">Dec. 28,
-                                2019 Jiggle App Standalone ReactJS version</a>
-                            <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Jan. 15,
-                                2020 Joggle App MERN stack version</a>
+
                         </div>
                     </li>
                     <li class="nav-item">
