tidy-up portfolio, resume

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" role="button" onclick="loadContact()">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./assets/includes/Steven-Bowler.pdf">Resume</a>
+                        <a class="nav-link" href="./assets/includes/StevenBowlerResume.pdf">Resume</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -47,38 +47,42 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <!-- https://vast-ridge-32092.herokuapp.com/ -->
-                            <a class="dropdown-item" href="https://project-bbers.herokuapp.com/">Friendly Neighborhood
-                                Pet Adoption App, on Heroku, Team Project 2</a>
                             <a class="dropdown-item"
-                                href="https://protected-hollows-73924.herokuapp.com/">sequelizedBurger Restaurant
+                                href="https://protected-hollows-73924.herokuapp.com/">sequelizedBurger Restaurant Order
+                                Managment
                                 App, on
                                 Heroku</a>
-                            <a class="dropdown-item" href="https://vast-ridge-32092.herokuapp.com/">burger Restaurant
-                                App, on
-                                Heroku</a>
-                            <a class="dropdown-item" href="https://intense-ravine-38720.herokuapp.com/">FriendFinder, on
-                                Heroku</a>
-                            <a class="dropdown-item" href="https://github.com/stevenbowler/bamazon">bamazon, see
-                                README.md</a>
-                            <a class="dropdown-item" href="https://github.com/stevenbowler/WordGuess-Cli">WordGuess-CLI
-                                Repository, see README.md</a>
-                            <a class="dropdown-item" href="https://github.com/stevenbowler/liri-node-app">Liri Node App
-                                Repository, see README.md</a>
-                            <a class="dropdown-item" href="https://stevenbowler.github.io/RPSchallenge/">RPS
-                                Challenge</a>
-                            <a class="dropdown-item" href="https://stevenbowler.github.io/GifTastic/">GifTastic</a>
-                            <a class="dropdown-item" href="https://stevenbowler.github.io/TriviaGame/">Trivia
-                                Game</a>
-                            <a class="dropdown-item" href="https://stevenbowler.github.io/unit-4-game/">Star Wars
-                                Game</a>
-                            <a class="dropdown-item" href="https://stevenbowler.github.io/Word-Guess-Game/">Word
-                                Guess Game</a>
-                            <a class="dropdown-item" href="https://robertalanis.github.io/Project-1/">Bountiful
-                                Books - Team Project 1</a>
                             <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Joggle Game -
                                 Full Stack MERN App with Password Ecryption and JSON Web Tokens</a>
-                            <div class="dropdown-divider"></div>
+                            <!-- <a class="dropdown-item" href="https://vast-ridge-32092.herokuapp.com/">burger Restaurant
+                                App, on
+                                Heroku</a> -->
+                            <a class="dropdown-item" href="https://intense-ravine-38720.herokuapp.com/">FriendFinder,
+                                Match your personality type, on
+                                Heroku</a>
+                            <a class="dropdown-item" href="https://github.com/stevenbowler/bamazon">bamazon, CLI-based
+                                shopping cart app, see
+                                README.md</a>
+                            <a class="dropdown-item" href="https://github.com/stevenbowler/WordGuess-Cli">WordGuess,
+                                CLI-based hangman game, see README.md</a>
+                            <a class="dropdown-item" href="https://github.com/stevenbowler/liri-node-app">Liri Node App,
+                                CLI-based Media Search, see README.md</a>
+                            <a class="dropdown-item" href="https://stevenbowler.github.io/RPSchallenge/">RPS
+                                Challenge, Rock-Paper-Scissors Solitaire or Multi-user Challenge</a>
+                            <a class="dropdown-item" href="https://stevenbowler.github.io/GifTastic/">GifTastic, Search,
+                                Find and Store Your Favorite GIFs</a>
+                            <a class="dropdown-item" href="https://stevenbowler.github.io/TriviaGame/">Trivia
+                                Game, Guess Your Favorite Classical Composer</a>
+                            <!-- <a class="dropdown-item" href="https://stevenbowler.github.io/unit-4-game/">Star Wars
+                                            Game</a>
+                                            <a class="dropdown-item" href="https://stevenbowler.github.io/Word-Guess-Game/">Word
+                                                Guess Game</a> -->
+                            <!-- <a class="dropdown-item" href="https://robertalanis.github.io/Project-1/">Bountiful
+                                                    Books - Team Project 1</a> -->
+                            <a class="dropdown-item" href="https://project-bbers.herokuapp.com/">Friendly Neighborhood
+                                Pet Adoption App, on Heroku, Team Project</a>
 
+                            <div class="dropdown-divider"></div>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -99,7 +103,7 @@
     </div>
     <h1>test</h1>
     <div id="home" class="jumbotron animated zoomInRight delay-0s">
-        <section class="animated zoomInRight delay-0s">
+        <section class="animated zoomInRight delay-0s" style="font-size: large;">
             <h2>About Me
             </h2>
             <img class="animated zoomInRight delay-0s" src="./assets/images/IMG_3192.JPG" alt="SB photo" height="100px"
@@ -108,22 +112,20 @@
                     dogs too.</strong>
             </p><br>
             <p class="animated zoomInLeft delay-0s"> I have 40 years of successful entrepreneurial experience in
-                operations management
-                and advanced manufacturing control systems execution in various countries.
+                Engineering, Operations Management
+                and Advanced Manufacturing Control Systems execution in various countries.
             </p><br>
             <p class="animated zoomInRight delay-0s"> Effective January 2020 I am enrolled part-time in both: Masters
                 Science in Information Technology at University of Texas Rio Grande Valley; and, the Coding Bootcamp
                 program at University
-                of Texas Austin. Professional development in these areas will complement my experience and enable me to
-                afford even more effective means of improving operational efficiency in manufacturing operations.
+                of Texas Austin. Professional development in these areas will complement my hands-on experience and
+                enable me to
+                afford even better solutions to business problems.
             </p><br>
             <p class="animated zoomInLeft delay-0s"> As a successful entrepreneur I see significant opportunities to
-                offer value to
-                manufacturing operations customers through project management and software development for higher level
-                operational
-                monitoring and control. My experience in operations management will help ensure that any solutions
-                offered, be they
-                operational or software based, will be value-adding.
+                offer value to customers or employers through project management and software development. My experience
+                in
+                operations management will help ensure that any solutions offered will be value-adding.
             </p><br>
         </section>
     </div>
