add Hot-Rest to portfolio, had many commits so included

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                                                     Books - Team Project 1</a> -->
                             <a class="dropdown-item" href="https://project-bbers.herokuapp.com/">Friendly Neighborhood
                                 Pet Adoption App, on Heroku, Team Project</a>
+                            <a class="dropdown-item" href="https://stark-crag-84677.herokuapp.com/">Hot-Rest, Restaurant
+                                Wait List App, on Heroku, Team Project</a>
 
                             <div class="dropdown-divider"></div>
                         </div>
