--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                                 Heroku</a>
                             <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Joggle Game -
                                 Full Stack MERN App with Password Ecryption and JSON Web Tokens</a>
-                            <a class="dropdown-item"
-                                href="https://drive.google.com/file/d/1XMQuu6M5aoTMCU7vH7ycghjCRjT-lVaB/view">Joggle
-                                Game Video Tutorial</a>
+                            <!-- <a class="dropdown-item"
+                                href="https://drive.google.com/file/d/1Vs6C1D5x1UoC_ONTekmDN3j9wV3LmicJ/view">Joggle
+                                Game Video Tutorial</a> -->
                             <!-- <a class="dropdown-item" href="https://vast-ridge-32092.herokuapp.com/">burger Restaurant
                                 App, on
                                 Heroku</a> -->
