final version without server

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <label>Enter your message here please: </label><br>
                 <textarea id="contactMessage" rows="6" placeholder="Enter Message Please"
                     style="background-color:lightgrey; color:black;"></textarea><br><br>
-                <button type=submit height=40px>Submit</button><br><br>
+                <button id="sendContactMessage" type=submit height=40px>Submit</button><br><br>
             </form>
         </section>
     </div>
